[package]
name = "cosmos-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
futures = "0.3.28"
tendermint = "0.30.0"
tendermint-rpc = { version = "0.30.0",  features = ["websocket-client"] }
tokio = { version = "1.27.0", features = ["full"] }
